<resources>
    <string name="app_name">Tasky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">password</string>
    <string name="get_started">Get started</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
</resources>